--- a/styl/stylus.styl
+++ b/styl/stylus.styl
@@ -1,39 +1,8 @@
-font-type = arial
-width = 1280px
-
-color1 = #333333
-color2 = #445161
-color3 = #445162
-color4 = #f5f5f5
-color5 = #989898
-color-white = #ffffff
-
-color = {
-  "light-black": #333333,
-  "dark-grey": #445162,
-  "grey": #989898,
-  "light-grey": #f5f5f5,
-  "white": #ffffff
-}
-
-grid()
-  display: grid
-
-grid-col()
-  grid()
-  grid-template-columns: arguments
-
-
-  vendor(prop, args)
-    -webkit-{prop} args
-    -moz-{prop} args
-    {prop} args
-
-  border-radius()
-    vendor('border-radius', arguments)
-
-  box-shadow()
-    vendor('box-shadow', arguments)
+@import 'variables'
+@import 'mixins'
+@import 'header'
+@import 'footer'
+@import 'main'
 
 body
   font-family: font-type
@@ -45,13 +14,13 @@ body
 }
 
 .bg-dark
-    opacity: 0.95
-    background-color: color.dark-grey
-    color: color.white
+    opacity: $opacity
+    background-color: $color.GreyDark
+    color: $color.White
 
 .bg-white
-  opacity: 0.95
-  background-color: color.white
+  opacity: $opacity
+  background-color: $color.White
 
 .padding-side
   padding: 50px
@@ -60,7 +29,7 @@ body
 .header
   &-wrp
     min-height: 300px
-    grid-col 1fr 1fr
+    grid-col 0 0 1fr 1fr
 
   &-cnt
     & > h3
@@ -95,7 +64,7 @@ body
       font-size: 30px
       line-height: 36px
       font-weight: 400
-      color: color.dark-grey
+      color: $color.GreyDark
       text-align: center
       margin: 0 0 30px 0
 
@@ -109,14 +78,14 @@ body
     min-height: 530px
 
 .lane
-  background-color: color.light-grey
-  opacity: 0.95
+  background-color: $color.GreyLight
+  opacity: $opacity
 
 .cnt-title
     font-size: 30px
     line-height: 36px
     font-weight: 400
-    color: #445161
+    color: $color.GreyDark
     text-align: center
     margin: 0 0 30px 0
 
@@ -124,13 +93,12 @@ body
   font-size: 16px
   line-height: 24px
   font-weight: 400
-  color: color.light-black
+  color: $color.BlackLight
   text-align: justify;
 
 .about
   &-wrp
-    grid-col 2fr 1fr
-    grid-column-gap: 100px
+    grid-col 0 100px 2fr 1fr
     & > img
       width: 430px
       height: 245px
@@ -139,9 +107,7 @@ body
 
 .plus
   &-list
-    grid-col: 1fr 1fr
-    grid-row-gap: 35px
-    grid-column-gap: 20px
+    grid-col: 35px 20px 1fr 1fr
   &-item
     padding: 0 0 0 40px
     position: relative
@@ -152,8 +118,8 @@ body
       display: block
       width: 32px
       height: 32px
-      background-color: color.dark-grey
-      color: white
+      background-color: $color.GreyDark
+      color: White
       font-size: 28px
       text-align: center
       line-height: 32px
@@ -163,36 +129,32 @@ body
 
 .screenshot
   &-list
-    grid-col: 1fr 1fr
-    grid-gap: 30px 15px
+    grid-col: 30px 15px 1fr 1fr
   &-item
-    grid-col: auto auto
-    grid-gap: 15px
+    grid-col: 0 15px auto auto
     & h5
       font-size:24px
       line-height: 30px
       font-weight: 400;
-      color: color.dark-grey
+      color: $color.GreyDark
       margin: 0 0 15px 0
     & p
       margin 0
 
 .review
   &-list
-    grid-col: 1fr 1fr
-    grid-gap: 32px 32px
+    grid-col: 32px 32px 1fr 1fr
   &-item
-    grid-col: auto auto
-    grid-column-gap: 26px
+    grid-col: 0 26px auto auto
     &-text
       font-size: 14px
       line-height: 18px
       font-weight: 400
       font-style: italic
-      color: color.grey
+      color: $color.Grey
       margin: 0
       &-wrp
-        background: #ebebeb
+        background: $color.ColorReview
         border-radius: 5px
         position: relative
         padding: 16px 20px
@@ -203,29 +165,28 @@ body
           left: -28px
           bottom: 85px
           border: 15px solid transparent
-          border-right: 15px solid #ebebeb
+          border-right: 15px solid $color.ColorReview
     &-subtext
       font-size: 14px
       line-height: 18px
       font-weight: 400
-      color: color.grey
+      color: $color.Grey
       margin 15px
 
 .buy
   &-list
-    grid-col: 1fr 1fr 1fr
-    grid-column-gap: 45px
+    grid-col: 0 45px 1fr 1fr 1fr
   &-item
     border-radius: 4px
-    border: 2px solid color.dark-grey
+    border: 2px solid $color.GreyDark
     align-self: end
-    background-color: color.dark-grey
+    background-color: $color.GreyDark
   &-title
     font-size: 24px
     line-height: 30px
     font-weight: 400
-    color: color.white
-    background-color: color.dark-grey
+    color: $color.White
+    background-color: $color.GreyDark
     text-align: center
     margin: 0
     padding: 16px
@@ -233,38 +194,38 @@ body
     font-size: 40px
     line-height: 30px
     font-weight: 400
-    color: color.dark-grey
+    color: $color.GreyDark
     text-align: center;
     padding: 18px 0;
     margin: 0 0 20px 0;
-    background-color: color.white
+    background-color: $color.White
   &-text
     margin: 0
     padding: 0 20px
-    background-color: color.dark-grey
+    background-color: $color.GreyDark
     font-size: 16px
     line-height: 24px
     font-weight 400
-    color: color.white
-    white-space: pre-line
+    color: $color.White
+    White-space: pre-line
   &-button
     font-size: 18px
     line-height: 18px
     font-weight: 700
-    color: color.dark-grey
+    color: $color.GreyDark
     display: block
     margin: 20px
     padding: 14px 0
     border-radius: 4px
-    background-color: color.white
+    background-color: $color.White
     text-decoration: none;
     text-align: center;
     text-transform: uppercase;
-    box-shadow: 0 2px color.grey
+    box-shadow: 0 2px $color.Grey
     &:hover
-      background-color: #f5f5f5
+      background-color: $color.GreyLight
     &:active
-      background-color: color.grey
+      background-color: $color.Grey
 
 .contact
   &-title
@@ -289,19 +250,19 @@ body
       width: 140px
       padding: 14px 0
       border-radius: 4px
-      background-color: color.white
+      background-color: $color.White
       font-size: 16px
       line-height: 24px
       font-weight: 700
       text-transform: uppercase
-      color: color.dark-grey
-      border: 1px solid color.white
+      color: $color.GreyDark
+      border: 1px solid $color.White
       &:hover
-        background-color: #f5f5f5
-        border-color: #f5f5f5
+        background-color: $color.GreyLight
+        border-color: $color.GreyLight
       &:active
-        background-color: color.grey
-        border-color: color.grey
+        background-color: $color.Grey
+        border-color: $color.Grey
 
 .social
   &-list
@@ -310,7 +271,7 @@ body
   &-item
     display: flex
     align-items: center
-    margin: 0 0 18px 0
+    margin: 0
   & > img
     width: 24px
     height: 24px
@@ -318,16 +279,16 @@ body
     margin: 0 0 0 5px;
 
 .footer-copy-wrp
-  opacity: 0.95
+  opacity: $opacity
   height: 26px
   text-align: center
-  background-color: #f5f5f5
+  background-color: $color.GreyLight
   display: flex
   justify-content: center
   & > p
     font-size: 14px
     line-height: 18px
     font-weight: 400
-    color: color.grey
+    color: $color.Grey
     margin: 0
     align-self: center
