completed split stylus

--- a/styl/mixins.styl
+++ b/styl/mixins.styl
@@ -16,3 +16,8 @@ grid-col(xgap, ygap, columns...)
   grid()
   grid-template-columns: columns
   grid-gap: xgap ygap
+
+fontly(size, weight, height)
+  font-size: size
+  font-weight: weight
+  line-height: height
