--- a/css/stylus.css
+++ b/css/stylus.css
@@ -1,18 +1,18 @@
 .header-wrp {
   min-height: 300px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   grid-gap: 0 0;
 }
-.header-cnt > h3 {
+.header-cnt-title {
   text-shadow: 1px 1px 0 rgba(0,0,0,0.3);
   font-size: 60px;
   font-weight: 400;
   line-height: 1.2;
-  margin: 0;
+  margin: 0 0 30px 0;
 }
 .header-cnt-list {
-  margin: 50px 0 0 0;
+  margin: 0;
   list-style-type: none;
 }
 .header-cnt-list-item {
@@ -34,8 +34,11 @@
   left: -30px;
 }
 .header-img {
-  width: 469px;
-  height: 214px;
+  width: 470px;
+  height: 215px;
+}
+.header-img-wrp {
+  text-align: right;
 }
 .header-title {
   font-size: 30px;
