--- a/styl/header.styl
+++ b/styl/header.styl
@@ -1,15 +1,14 @@
 .header
   &-wrp
     min-height: 300px
-    grid-col 0 0 1fr 1fr
-
+    grid-col 0 0 2fr 1fr
   &-cnt
-    & > h3
+    &-title
       text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3)
       fontly: 60px 400 1.2
-      margin: 0
+      margin: 0 0 30px 0
     &-list
-      margin: 50px 0 0 0
+      margin: 0
       list-style-type: none
       &-item
         text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3)
@@ -26,10 +25,7 @@
             top: 8px
             left: -30px
   &-img
-    width: 469px
-    height: 214px
-  &-title
-    fontly: 30px 400 36px
-    color: $color.GreyDark
-    text-align: center
-    margin: 0 0 30px 0
+    width: 470px
+    height: 215px
+    &-wrp
+      text-align: right;
