--- a/styl/main.styl
+++ b/styl/main.styl
@@ -11,12 +11,6 @@
   background-color: $color.GreyLight
   opacity: $opacity
 
-.cnt-title
-  fontly: 30px 400 36px
-  color: $color.GreyDark
-  text-align: center
-  margin: 0 0 30px 0
-
 .style-text-middle p
   fontly: 16px 400 24px
   color: $color.BlackLight
@@ -28,8 +22,13 @@
     & > img
       width: 430px
       height: 245px
-  &-cnt-text
-    margin: 0 0 20px 0
+  &-cnt
+    &-title
+      fontly: 30px 400 36px
+      color: $color.GreyDark
+      margin: 0 0 30px 0
+    &-text
+      margin: 0 0 20px 0
 
 .plus
   &-list
