rework title every content

--- a/styl/main.styl
+++ b/styl/main.styl
@@ -1,3 +1,9 @@
+.cnt-title
+  fontly: 30px 400 36px
+  color: $color.GreyDark
+  text-align: center
+  margin: 0 0 30px 0
+
 .main
   &-wrp
     width 100%
