--- a/styl/main.styl
+++ b/styl/main.styl
@@ -40,6 +40,8 @@
 .plus
   &-list
     grid-col: 35px 20px 1fr 1fr
+    list-style: none
+    margin: 0
   &-item
     padding: 0 0 0 40px
     position: relative
