--- a/styl/main.styl
+++ b/styl/main.styl
@@ -116,15 +116,14 @@
     margin: 0
     padding: 16px
   &-price
+    display: block;
     fontly: 40px 400 30px
     color: $color.GreyDark
     text-align: center;
     padding: 18px 0;
     margin: 0 0 20px 0;
     background-color: $color.White
-  &-text
-    margin: 0
-    padding: 0 20px
+  &-text > li
     background-color: $color.GreyDark
     fontly: 16px 400 24px
     color: $color.White
