Rename .lane to .bg-grey. Move .bg-grey in stylus.styl

--- a/styl/stylus.styl
+++ b/styl/stylus.styl
@@ -22,5 +22,9 @@ body
   opacity: $opacity
   background-color: $color.White
 
+.bg-grey
+  opacity: $opacity
+  background-color: $color.GreyLight
+
 .padding-side
   padding: 50px
