--- a/styl/header.styl
+++ b/styl/header.styl
@@ -20,7 +20,7 @@
             height: 19px
             display: block
             position: absolute
-            background-image: url(img/check_icon_346.png)
+            background-image: url(../img/check_icon_346.png)
             background-size: cover
             top: 8px
             left: -30px
