--- a/styl/stylus.styl
+++ b/styl/stylus.styl
@@ -28,3 +28,8 @@ body
 
 .padding-side
   padding: 50px
+
+.style-text-middle p
+  fontly: 16px 400 24px
+  color: $color.BlackLight
+  text-align: justify;
