--- a/styl/main.styl
+++ b/styl/main.styl
@@ -13,11 +13,6 @@
   &-wrp
     min-height: 530px
 
-.style-text-middle p
-  fontly: 16px 400 24px
-  color: $color.BlackLight
-  text-align: justify;
-
 .about
   &-wrp
     grid-col 0 100px 2fr 1fr
@@ -30,9 +25,11 @@
       fontly: 30px 400 36px
       color: $color.GreyDark
       margin: 0 0 30px 0
+      text-align: left;
     &-text
       margin: 0 0 20px 0
-
+      &:last-child
+        margin: 0
 .plus
   &-list
     grid-col: 35px 20px 1fr 1fr
@@ -72,7 +69,7 @@
   &-list
     grid-col: 32px 32px 1fr 1fr
   &-item
-    grid-col: 0 26px auto auto
+    grid-col: 0 25px auto auto
     &-text
       fontly: 14px 400 18px
       font-style: italic
@@ -92,9 +89,10 @@
           border: 15px solid transparent
           border-right: 15px solid $color.ColorReview
     &-subtext
+      display: block;
       fontly: 14px 400 18px
       color: $color.Grey
-      margin 15px
+      margin 15px 0 0 0
 
 .buy
   &-list
