Centring and no repeat img on background.

--- a/styl/stylus.styl
+++ b/styl/stylus.styl
@@ -7,11 +7,11 @@
 body
   font-family: font-type
   background: url(../img/photo-of-snow-field-near-trees-1978126.jpg)
-
-.container {
-  margin: 0 auto;
+  background-position: center;
+  background-repeat: no-repeat;
+.container
+  margin: 0 auto
   width: width
-}
 
 .bg-dark
     opacity: $opacity
