--- a/styl/footer.styl
+++ b/styl/footer.styl
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center
   &-form
-    width: 500px
+    min-width: 500px
     text-align: center
     & input[type=text],input[type=email],textarea
       width: 100%
@@ -32,16 +32,57 @@
         border-color: $color.Grey
 
 .social
+  &-wrp
+    margin: 0 0 0 60px
+  &-link
+    display: block;
+    margin: 0 0 15px 0;
+    padding: 0 0 0 30px;
+    position: relative;
+    font-size: 16px;
+    font-family: "arial";
+    line-height: 1.5;
+    text-align: left;
+    &::before
+      content: ""
+      display: block
+      width: 24px
+      height: 24px
+      background-position: center
+      background-repeat: no-repeat
+      background-size: cover
+      position: absolute
+      top: 1px
+      left: 0
+    &:nth-of-type(1):before
+      background-image: url(../img/skype_icon_319.png)
+    &:nth-of-type(2):before
+      background-image: url(../img/icq_icon_324.png)
+    &:nth-of-type(3):before
+      background-image: url(../img/email_icon_332.png)
+    &:nth-of-type(4):before
+      background-image: url(../img/phone_icon_337.png)
   &-list
-    margin: 0 0 0 46px
-    list-style: none
+    display: flex
+    justify-content: space-between
+    min-width: 240px
   &-item
     display: flex
-    align-items: center
-    margin: 0
-  & > img
-    width: 24px
-    height: 24px
+    height: 42px
+    width: 42px
+    border-radius: 50%
+    background-color: $color.White
+    text-align: center
+    color: $color.GreyDark
+    text-decoration: none;
+    &:hover
+      background-color: $color.GreyLight
+    &:active
+      background-color: $color.Grey
+
+.fab
+  display: block
+  margin: auto
 
 .footer-copy-wrp
   opacity: $opacity
