--- a/css/stylus.css
+++ b/css/stylus.css
@@ -53,7 +53,7 @@
   justify-content: center;
 }
 .contact-form {
-  width: 500px;
+  min-width: 500px;
   text-align: center;
 }
 .contact-form input[type=text],
@@ -89,18 +89,69 @@
   background-color: #989898;
   border-color: #989898;
 }
+.social-wrp {
+  margin: 0 0 0 60px;
+}
+.social-link {
+  display: block;
+  margin: 0 0 15px 0;
+  padding: 0 0 0 30px;
+  position: relative;
+  font-size: 16px;
+  font-family: "arial";
+  line-height: 1.5;
+  text-align: left;
+}
+.social-link::before {
+  content: "";
+  display: block;
+  width: 24px;
+  height: 24px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 1px;
+  left: 0;
+}
+.social-link:nth-of-type(1):before {
+  background-image: url("../img/skype_icon_319.png");
+}
+.social-link:nth-of-type(2):before {
+  background-image: url("../img/icq_icon_324.png");
+}
+.social-link:nth-of-type(3):before {
+  background-image: url("../img/email_icon_332.png");
+}
+.social-link:nth-of-type(4):before {
+  background-image: url("../img/phone_icon_337.png");
+}
 .social-list {
-  margin: 0 0 0 46px;
-  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  min-width: 240px;
 }
 .social-item {
   display: flex;
-  align-items: center;
-  margin: 0;
+  height: 42px;
+  width: 42px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  background-color: #fff;
+  text-align: center;
+  color: #445162;
+  text-decoration: none;
 }
-.social > img {
-  width: 24px;
-  height: 24px;
+.social-item:hover {
+  background-color: #f5f5f5;
+}
+.social-item:active {
+  background-color: #989898;
+}
+.fab {
+  display: block;
+  margin: auto;
 }
 .footer-copy-wrp {
   opacity: 0.96;
