--- a/styl/footer.styl
+++ b/styl/footer.styl
@@ -15,6 +15,7 @@
       margin: 0 0 20px 0
       padding: 14px 10px
       border-radius: 4px
+      box-sizing: border-box
     & input[type="submit"]
       width: 140px
       padding: 14px 0
