Replace div to figure + figcaption

--- a/styl/main.styl
+++ b/styl/main.styl
@@ -69,7 +69,8 @@
   &-list
     grid-col: 32px 32px 1fr 1fr
   &-item
-    grid-col: 0 25px auto auto
+    grid-col: 0 20px auto auto
+    margin: 0;
     &-text
       fontly: 14px 400 18px
       font-style: italic
